fix horizontal scrollbar

--- a/FluentDiscord/ui/scrollbars.scss
+++ b/FluentDiscord/ui/scrollbars.scss
@@ -70,6 +70,7 @@
 
     &:start:increment, &:end:decrement {
       height: 0 !important;
+      width: 0 !important;
     }
 
     &:vertical:decrement {
