--- a/bdv1/FluentDiscord.theme.css
+++ b/bdv1/FluentDiscord.theme.css
@@ -2616,7 +2616,8 @@ body, button, input, select, textarea {
     .theme-light ::-webkit-scrollbar-button:active {
       background-color: #5d5d5d !important; }
     ::-webkit-scrollbar-button:start:increment, ::-webkit-scrollbar-button:end:decrement {
-      height: 0 !important; }
+      height: 0 !important;
+      width: 0 !important; }
     ::-webkit-scrollbar-button:vertical:decrement {
       background-image: var(--theme-icon-scroll-chevron-top) !important; }
     ::-webkit-scrollbar-button:vertical:increment {
